--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
   ============================-->
     <header id="header">
       <div class="container">
-        <div id="logo" class="pull-left">
+        <d id="logo" class="pull-left">
           <a href="https://www.asceiiest.com/" class="scrollto" target="_blank">
             <img src="img/REVELATION.png" alt="logo" />
           </a>
-        </div>
 
         <nav id="nav-menu-container">
           <h1 class="heading-logo">REVELATION</h1>
@@ -63,6 +62,7 @@
             <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
           </ul>
         </nav>
+
         <!-- #nav-menu-container -->
       </div>
     </header>
@@ -1437,7 +1437,7 @@
 
             <div class="col-lg-3 col-md-6 footer-contact">
               <!-- <div class="alt-contact"> -->
-                <!-- <h4>Contact Us</h4> -->
+                <h4>Contact Us</h4>
                 <!-- <p>
                   A108 Adam Street <br />
                   New York, NY 535022<br />
